[tool.poetry]
name = "fast-soup"
version = "1.1.0"
description = "BeautifulSoup interface for lxml"
authors = ["spumer <spumer-tm@yandex.ru>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.6"
lxml = "^4.5.0"
beautifulsoup4 = "^4.3.2"
cssselect = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7"
bumpversion = "^0.6.0"
unify = "^0.5"
flake8-awesome = "^1.3"
black = "^20.8b1"
pytest-cov = "^4.0"
pytest-deadfixtures = "^2.2.1"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
